# optuna_tileQR

./: .gitignore  README.md  optuna_turing.py  pyproject.toml  run_benchmark.sh  run_optuna.sh
setup/: check.sh  install.sh  install_plasma.sh  install_python_deps.sh
src/: benchmark.py  heatmap.py  optuna_base.py  optuna_main.py  run_time_dgeqrf.py
src/tuning/: __init__.py  normal_optuna.py  select_optuna.py  ssrfb_optuna.py
tools/: optuna_base.py  run_time_dgeqrf.py  ssrfb_turing.py
tools/Tune_SSRFB-master/: Makefile  MultCallFlushLRU.cpp  NoFlush.cpp
turing/: normal_optuna.py  select_optuna.py  ssrfb_optuna.py
