[project]
name = "optuna-turing"
version = "0.1.0"
description = "Parameter tuning for tile QR decomposition in PLASMA library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "kaleido==0.2.1",
    "optuna>=4.3.0",
    "plotly>=6.0.1",
    "scikit-learn>=1.3.2",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]
 